Fixed Dark Mode Font Color of Output Text

--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -63,6 +63,7 @@
     width: 15vw;
     height: 25vh;
     margin: 0.5rem;
+    color: var(--font-color);
     border: 1px solid var(--border-color);
     border-radius: 10px;
     -webkit-box-shadow: 13px 14px 26px -9px rgba(0, 0, 0, 0.75);
